kubernetes/apps/selfhosted/uptime-kuma/app/statefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &app uptime-kuma
  namespace: selfhosted
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
  annotations:
    meta.helm.sh/release-name: uptime-kuma
spec:
  replicas: 1
  serviceName: uptime-kuma
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
      app.kubernetes.io/instance: uptime-kuma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
        app.kubernetes.io/instance: uptime-kuma
    spec:
      serviceAccountName: uptime-kuma
      securityContext:
        {}
      nodeSelector:
        kubernetes.io/hostname: talos-worker-eu-02
      containers:
        - name: uptime-kuma
          securityContext:
            {}
          image: "louislam/uptime-kuma:2.5.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 3001
          livenessProbe:
            exec:
              command:
              - extra/healthcheck
          readinessProbe:
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
          resources:
            {}
          volumeMounts:
            - mountPath: /app/data
              name: uptime-storage
              readOnly: false
      volumes:
        - name: uptime-storage
          persistentVolumeClaim:
            claimName: uptime-storage-pvc
