kubernetes/apps/selfhosted/uptime-kuma/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: selfhosted
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: web
      protocol: TCP
      name: web
  selector:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
